css/lizstyle.css
body {
	background-color: #AD918C;
	background-image: url("../images/birds.jpg");
	background-size: cover;
	background-attachment: fixed;
	background-repeat: no-repeat;
	background-position: 50% 0;
	font-size: 100%;
	font-family: 'Yantramanav', sans-serif;
}

h1 {
	text-align: center;
	font-weight: bold;
}

h3 {
	text-align: center;
	font-weight: bolder;
}

p {
	font-size: 110%;
	color: black;
}

.navbar {
	background-color: #fffff6;
	opacity: 1;
	z-index: 5;
	width: 100%;
	font-size: 120%;

}

.profile-rounded {
	float: right;
	opacity: 1;
}

#spacer {
	margin: 60px;
}

.profile {
	align-items: right;
	border: 8px solid #fffff6;
}

.logos {
	align-items: center;
}

.text-box {
	clear: both;
}

/* Make the links look cool */
a:link {
	color: black;
	text-decoration: none;
	font-weight: bold;
	font-size: 110%;
	}
a:visited {
	color: black;
	text-decoration: none;
	}
a:hover {
	opacity: .5;
	text-decoration: none;
	}



.projects {
	background-color: #fffff6;
	opacity: .9;
	padding: 30px;
	align-content: center;
}

.portfolio {
	border: 4px solid #AD918C;

}

.col-lg-4 {
	opacity: .9;
	border: 4px solid #fffff6;
}

.blurbs, .projects {
	border: 40px 100px solid #fffff6;
	background-color: #fffff6;
	padding: 0 50px;
	margin: 20px 0;
	opacity: .9;
}


// Small devices (landscape phones, 576px and up)
@media (max-width: 576px) {
	body {
		background-image: fixed;
		background-size: contain;
	}
}

// Medium devices (tablets, 768px and up)
@media (min-width: 768px) {
	body {
		background-image: fixed;
	}
}

